--- a/day2.ipynb
+++ b/day2.ipynb
@@ -17,6 +17,7 @@
    ],
    "source": [
     "from langchain_community.chat_models import ChatOllama\n",
+    "\n",
     "llm = ChatOllama(model='llama3', temperature=0)"
    ]
   },
@@ -77,7 +78,7 @@
     "5. 통과한 경우 RAG + query를 넣어서 답변 [v]\n",
     "6. 할루시네이션 체크 (근거가 있는 사실인지 물어보기) [v]\n",
     "7. 할루시네이션이 아닌 경우 바로 답변 [v]\n",
-    "8. 할루시네이션인 경우 다시 답변 생성 (retry 5 times)"
+    "8. 할루시네이션인 경우 다시 답변 생성 (retry 5 times) [v]"
    ]
   },
   {
@@ -237,38 +238,40 @@
     "            print(f\"Error converting score to float: {e}\")\n",
     "    return None\n",
     "\n",
-    "template = \"\"\"\n",
-    "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "def check_relevance():\n",
+    "    template = \"\"\"\n",
+    "    <|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "        \n",
+    "    You are developing a retrieval(context) evaluator system. \n",
+    "    Define the criteria that determine if a retrieved document is relevant to a user's question. \n",
+    "    Your goal is to create a set of guidelines that the system will follow to assess relevance accurately. \n",
+    "    First, consider the key elements that indicate relevance between a user's question and a retrieved document. \n",
+    "    Think about how the system can analyze the content to make this determination effectively.\n",
+    "    Consider the fact that retrieval will not be used when the score is below 0.5.\n",
+    "    Please ANSWER TOTOAL SCORE IN FORMAT '#Answer:float'.\n",
+    "    <|eot_id|>\n",
+    "    <|start_header_id|>user<|end_header_id|>\n",
+    "    Context : {context}\n",
+    "    User Question : {question}<|eot_id|>\n",
+    "    <|start_header_id|>assistant<|end_header_id|>\n",
+    "    \"\"\"\n",
     "    \n",
-    "You are developing a retrieval(context) evaluator system. \n",
-    "Define the criteria that determine if a retrieved document is relevant to a user's question. \n",
-    "Your goal is to create a set of guidelines that the system will follow to assess relevance accurately. \n",
-    "First, consider the key elements that indicate relevance between a user's question and a retrieved document. \n",
-    "Think about how the system can analyze the content to make this determination effectively.\n",
-    "Consider the fact that retrieval will not be used when the score is below 0.5.\n",
-    "Please ANSWER TOTOAL SCORE IN FORMAT '#Answer:float'.\n",
-    "<|eot_id|>\n",
-    "<|start_header_id|>user<|end_header_id|>\n",
-    "Context : {context}\n",
-    "User Question : {question}<|eot_id|>\n",
-    "<|start_header_id|>assistant<|end_header_id|>\n",
-    "\"\"\"\n",
-    "\n",
-    "prompt = ChatPromptTemplate.from_template(template)\n",
-    "\n",
-    "rag_chain = (\n",
-    "    {\"context\": itemgetter(\"context\"),\n",
-    "    \"question\": itemgetter(\"question\")}\n",
-    "    | prompt\n",
-    "    | llm\n",
-    ")\n",
-    "\n",
-    "filtered_rags = []\n",
-    "for rag in rags:\n",
-    "    output = rag_chain.invoke({\"context\": rag, \"question\": question})\n",
-    "    score = extract_score_from_output(output.content)\n",
-    "    if (score is not None and score > 0.5):\n",
-    "        filtered_rags.extend(rag)"
+    "    prompt = ChatPromptTemplate.from_template(template)\n",
+    "    \n",
+    "    rag_chain = (\n",
+    "        {\"context\": itemgetter(\"context\"),\n",
+    "        \"question\": itemgetter(\"question\")}\n",
+    "        | prompt\n",
+    "        | llm\n",
+    "    )\n",
+    "    \n",
+    "    filtered_rags = []\n",
+    "    for rag in rags:\n",
+    "        output = rag_chain.invoke({\"context\": rag, \"question\": question})\n",
+    "        score = extract_score_from_output(output.content)\n",
+    "        if (score is not None and score > 0.5):\n",
+    "            filtered_rags.extend(rag)\n",
+    "    return filtered_rags\n"
    ]
   },
   {
@@ -286,31 +289,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "template = \"\"\"\n",
-    "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "def query_with_rag(filtered_rags):\n",
+    "    template = \"\"\"\n",
+    "    <|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "        \n",
+    "    Start by understanding the user's question.\n",
+    "    Analyze the context to determine the appropriate response.\n",
+    "    Tailor the response based on the context provided.\n",
+    "    Provide helpful and relevant information to the user within the specified context.\n",
+    "    <|eot_id|>\n",
+    "    <|start_header_id|>user<|end_header_id|>\n",
+    "    Context\n",
+    "    {context}\n",
+    "    '''\n",
+    "    User Question\n",
+    "    {question}<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
+    "    \"\"\"\n",
     "    \n",
-    "You are assistant who answers about given context.\n",
-    "Answer \"no context\" if there isn't any given context.\n",
-    "'''\n",
-    "Context\n",
-    "{context}\n",
-    "''\n",
-    "<|eot_id|>\n",
-    "<|start_header_id|>user<|end_header_id|>\n",
-    "\n",
-    "{question}<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
-    "\"\"\"\n",
-    "\n",
-    "prompt = ChatPromptTemplate.from_template(template)\n",
-    "\n",
-    "rag_chain = (\n",
-    "    {\"context\": itemgetter(\"context\"),\n",
-    "    \"question\": itemgetter(\"question\")}\n",
-    "    | prompt\n",
-    "    | llm\n",
-    ")\n",
-    "\n",
-    "output = rag_chain.invoke({\"context\": filtered_rags, \"question\": question})\n"
+    "    prompt = ChatPromptTemplate.from_template(template)\n",
+    "    \n",
+    "    rag_chain = (\n",
+    "        {\"context\": itemgetter(\"context\"),\n",
+    "        \"question\": itemgetter(\"question\")}\n",
+    "        | prompt\n",
+    "        | llm\n",
+    "    )\n",
+    "    \n",
+    "    return rag_chain.invoke({\"context\": filtered_rags, \"question\": question}).content\n"
    ]
   },
   {
@@ -326,23 +331,7 @@
    "execution_count": 11,
    "id": "30d36208-a269-48fe-bbb7-286fec56604a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Based on the given context, it seems that you are referring to the concept of agent memory in the context of LLM-powered autonomous agents.\n",
-      "\n",
-      "In this context, agent memory refers to the ability of an agent to retain and recall information over extended periods. This is different from short-term memory, which is used for learning and processing information in real-time.\n",
-      "\n",
-      "According to the text, long-term memory provides the agent with the capability to retain and recall (infinite) information over extended periods, often by leveraging an external vector store and fast retrieval.\n",
-      "\n",
-      "In addition, the text mentions that LLM-powered autonomous agents combine LLM with memory, planning, and reflection mechanisms to enable agents to behave conditioned on past experience, as well as interact with other agents. This suggests that agent memory plays a crucial role in enabling these agents to learn from their experiences and adapt to new situations.\n",
-      "\n",
-      "Overall, agent memory is an important aspect of LLM-powered autonomous agents, allowing them to retain and recall information over time and use it to inform their decision-making processes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def extract_boolean_from_output(content):\n",
     "    pattern = r\"#Answer:\\s*(True|False)\"\n",
@@ -353,49 +342,99 @@
     "        return True if answer == 'true' else False\n",
     "    return None\n",
     "\n",
-    "template = \"\"\"\n",
-    "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "\n",
+    "def check_haullcination(answer):\n",
+    "    template = \"\"\"\n",
+    "    <|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "        \n",
+    "    You are a hallucination checker AI. Your task is to assess whether a given answer generated by the LLM model corresponds to a user's question and determine if it exhibits signs of hallucination. \n",
+    "    If the answer is deemed hallucinatory, provide guidance on how to identify and correct such responses. If the answer is coherent, acknowledge its clarity and relevance to the question.\n",
     "    \n",
-    "You are a hallucination checker AI. Your task is to assess whether a given answer generated by the LLM model corresponds to a user's question and determine if it exhibits signs of hallucination. \n",
-    "If the answer is deemed hallucinatory, provide guidance on how to identify and correct such responses. If the answer is coherent, acknowledge its clarity and relevance to the question.\n",
+    "    Take a deep breath and let's take this step by step.\n",
+    "    \n",
+    "    Analyze the user's question carefully.\n",
+    "    Evaluate the LLM-generated answer in relation to the question.\n",
+    "    Determine if the answer shows signs of hallucination or if it directly addresses the question.\n",
+    "    If hallucination is detected, provide feedback on how to improve the response.\n",
+    "    If the answer is coherent, acknowledge its relevance and clarity.\n",
+    "    Please answer \"#Answer:true\" if it is hallucinated otherwise \"#Answer:false\"\n",
+    "    <|eot_id|>\n",
+    "    <|start_header_id|>user<|end_header_id|>\n",
+    "    LLM-generated answer\n",
+    "    {answer}\n",
+    "    ''\n",
+    "    User question\n",
+    "    {question}<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    prompt = ChatPromptTemplate.from_template(template)\n",
+    "    \n",
+    "    rag_chain = (\n",
+    "        {\"answer\": itemgetter(\"answer\"),\n",
+    "        \"question\": itemgetter(\"question\")}\n",
+    "        | prompt\n",
+    "        | llm\n",
+    "    )\n",
+    "    \n",
+    "    final_output = rag_chain.invoke({\"answer\": answer, \"question\": question})\n",
+    "    \n",
+    "    if not extract_boolean_from_output(final_output.content):\n",
+    "        return answer\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "04f417ba-c856-47a0-bdac-090fecf601dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on the provided context, it appears that you are interested in learning more about the concept of \"agent memory\" in the context of LLM-powered autonomous agents.\n",
+      "\n",
+      "From what I can gather from the text, there is a mention of two types of memory:\n",
+      "\n",
+      "1. **Short-term memory**: This refers to the ability of the model to learn and utilize information within its current context or prompt.\n",
+      "2. **Long-term memory**: This allows the agent to retain and recall vast amounts of information over extended periods, often by leveraging an external vector store and fast retrieval.\n",
+      "\n",
+      "Additionally, there is a mention of \"memory\" in the context of planning and reflection mechanisms, which enables agents to behave conditioned on past experience and interact with other agents.\n",
+      "\n",
+      "If you have any specific questions or would like me to elaborate on these concepts, please feel free to ask!\n"
+     ]
+    }
+   ],
+   "source": [
+    "retry = 0\n",
     "\n",
-    "Take a deep breath and let's take this step by step.\n",
-    "\n",
-    "Analyze the user's question carefully.\n",
-    "Evaluate the LLM-generated answer in relation to the question.\n",
-    "Determine if the answer shows signs of hallucination or if it directly addresses the question.\n",
-    "If hallucination is detected, provide feedback on how to improve the response.\n",
-    "If the answer is coherent, acknowledge its relevance and clarity.\n",
-    "Please answer \"#Answer:true\" if it is hallucinated otherwise \"#Answer:false\"\n",
-    "<|eot_id|>\n",
-    "<|start_header_id|>user<|end_header_id|>\n",
-    "LLM-generated answer\n",
-    "{answer}\n",
-    "''\n",
-    "User question\n",
-    "{question}<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
-    "\"\"\"\n",
-    "\n",
-    "prompt = ChatPromptTemplate.from_template(template)\n",
-    "\n",
-    "rag_chain = (\n",
-    "    {\"answer\": itemgetter(\"answer\"),\n",
-    "    \"question\": itemgetter(\"question\")}\n",
-    "    | prompt\n",
-    "    | llm\n",
-    ")\n",
-    "\n",
-    "final_output = rag_chain.invoke({\"answer\": output.content, \"question\": question})\n",
-    "\n",
-    "is_hallucinated = extract_boolean_from_output(final_output.content)\n",
-    "if not is_hallucinated:\n",
-    "    print(output.content)"
+    "while retry < 5:\n",
+    "    context = check_relevance()\n",
+    "    if len(context) == 0:\n",
+    "        print(\"no\")\n",
+    "        break\n",
+    "    result = check_haullcination(query_with_rag(context))\n",
+    "    if result is not None:\n",
+    "        print(result)\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"retry.......\" + str(retry + 1))\n",
+    "        retry += 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04f417ba-c856-47a0-bdac-090fecf601dc",
+   "id": "6c9196f1-3ffb-4991-916a-43d2c76e33f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "000b3d0e-9ddb-444f-890d-9dfccb66c3de",
    "metadata": {},
    "outputs": [],
    "source": []
